[project]
name = "ublue-rebase-helper"
version = "1.1.7"
description = "Implementation of bazzite-rebase-helper for compatibility with custom images"
readme = "README.md"
requires-python = ">=3.13"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
  "unit: mark test as a unit test",
  "integration: mark test as an integration test",
  "e2e: mark test as an end-to-end test",
  "slow: mark test as slow running",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.1",
  "radon>=6.0.1",
  "pyright>=1.1.408",
  "ruff>=0.15.1",
  "ty>=0.0.17",
  "prettier>=0.0.7",
]
